--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ script:
     - sleep 30 # wait 30 seconds till the container is ready
     - "export DOCKERID=`docker ps -qf 'ancestor=aiidateam/aiida-docker-base'`"
     - "echo \"Docker ID: $DOCKERID\""
-    - "docker exec --tty --user aiida \"$DOCKERID\" /bin/bash -l -c 'verdi status'"
+    - "docker exec --tty --user aiida \"$DOCKERID\" /bin/bash -l -c 'verdi'"
