Remove unnecessary docker scripts:
1) Remove build.sh, push.sh, tag.sh, etc are not needed anymore since
from now on the image will be build automatically on Docker Hub.
2) adapt readme accordingly
3) adapt .travis.yml accordingly

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ addons:
             - openssh-client
 
 install:
-    - ./build.sh
-    - ./run.sh
+    - docker build -t aiida-docker-base .
+    - docker run -d aiida-docker-base
 
 # I just run a command with verdi that returns a zero error code to see if
 # verdi is installed properly
